--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         .product-card img { transition: transform 0.5s ease; }
         .product-card:hover img { transform: scale(1.05); }
 
+        .project-overlay {
+            background: linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 40%);
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding-bottom: 80px !important;
+        }
+
+        .project-overlay p, .project-overlay h4 {
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+        }
+
         #mobile-menu {
             top: 80px;
             height: calc(100vh - 80px);
@@ -86,9 +98,7 @@
 
             <button id="menu-toggle" class="md:hidden z-[120] p-2 focus:outline-none">
                 <div class="nav-icon" id="nav-icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span></span><span></span><span></span>
                 </div>
             </button>
         </div>
@@ -119,18 +129,9 @@
                     Бид барилгын гадна талын өндөр чанартай материал, шийдлүүдийг мэргэжлийн түвшинд нийлүүлдэг. Архитектурын алсын харааг бодит бүтээц болгох хамгийн найдвартай гүүр нь бид юм. Чанар бол бидний үндсэн зарчим.
                 </p>
                 <div class="flex flex-wrap gap-16 border-t border-slate-200 pt-12">
-                    <div>
-                        <h4 class="text-5xl font-black italic">500+</h4>
-                        <p class="text-xs uppercase font-black text-slate-400 tracking-widest mt-2">Хэрэгжүүлсэн Төсөл</p>
-                    </div>
-                    <div>
-                        <h4 class="text-5xl font-black italic">15+</h4>
-                        <p class="text-xs uppercase font-black text-slate-400 tracking-widest mt-2">Жилийн Туршлага</p>
-                    </div>
-                    <div>
-                        <h4 class="text-5xl font-black italic">100%</h4>
-                        <p class="text-xs uppercase font-black text-slate-400 tracking-widest mt-2">Чанарын баталгаа</p>
-                    </div>
+                    <div><h4 class="text-5xl font-black italic">500+</h4><p class="text-xs uppercase font-black text-slate-400 tracking-widest mt-2">Хэрэгжүүлсэн Төсөл</p></div>
+                    <div><h4 class="text-5xl font-black italic">15+</h4><p class="text-xs uppercase font-black text-slate-400 tracking-widest mt-2">Жилийн Туршлага</p></div>
+                    <div><h4 class="text-5xl font-black italic">100%</h4><p class="text-xs uppercase font-black text-slate-400 tracking-widest mt-2">Чанарын баталгаа</p></div>
                 </div>
             </div>
             <div class="lg:col-span-5 relative">
@@ -147,43 +148,30 @@
         <div class="max-w-7xl mx-auto px-6">
             <h2 class="text-5xl font-black uppercase italic tracking-tighter mb-20">Бүтээгдэхүүн</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-                
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
                     <img src="cpanelmain.jpg" class="w-full h-60 object-cover mb-6">
                     <h3 class="text-2xl font-bold mb-4 italic">1. C-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Керамик чулуун гадаргуутай дулаалгатай фасад.</p>
-                    <div class="mt-auto">
-                        <a href="c-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
-                    </div>
+                    <div class="mt-auto"><a href="c-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a></div>
                 </div>
-
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
                     <img src="mpanelmain1.jpg" class="w-full h-60 object-cover mb-6">
                     <h3 class="text-2xl font-bold mb-4 italic">2. M-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Метал гадаргуутай дулаалгатай фасад.</p>
-                    <div class="mt-auto">
-                        <a href="m-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
-                    </div>
+                    <div class="mt-auto"><a href="m-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a></div>
                 </div>
-
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
                     <img src="COMING SOON.png" class="w-full h-60 object-cover mb-6">
                     <h3 class="text-2xl font-bold mb-4 italic">3. U-PANEL</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Цемент гадаргуутай дулаалгатай фасад.</p>
-                    <div class="mt-auto">
-                        <a href="u-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
-                    </div>
+                    <div class="mt-auto"><a href="u-panel.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a></div>
                 </div>
-
                 <div class="product-card bg-slate-800 p-4 rounded shadow-lg flex flex-col h-full">
                     <img src="decormain.jpg" class="w-full h-60 object-cover mb-6">
                     <h3 class="text-2xl font-bold mb-4 italic">4. Гоёлын хүрээ</h3>
                     <p class="text-slate-400 text-sm mb-6 leading-relaxed">Барилгын чимэглэл, цонхны хүрээ.</p>
-                    <div class="mt-auto">
-                        <a href="decor.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a>
-                    </div>
+                    <div class="mt-auto"><a href="decor.html" class="inline-block text-[10px] font-bold uppercase tracking-widest border border-white/20 px-6 py-3 hover:bg-white hover:text-slate-900 transition w-full text-center">Дэлгэрэнгүй үзэх</a></div>
                 </div>
-
             </div>
         </div>
     </section>
@@ -192,18 +180,19 @@
         <h2 class="text-4xl font-black uppercase italic mb-16">Бидний Ажил</h2>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide aspect-video">
-                    <img src="https://images.unsplash.com/photo-1541888946425-d81bb19480c5?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover grayscale hover:grayscale-0 transition duration-500">
-                    <div class="project-overlay absolute inset-x-0 bottom-0 p-10 text-white">
-                        <h4 class="text-2xl font-bold uppercase mb-2">Логистикийн Төв</h4>
-                        <p class="text-sm italic opacity-80">📍 Улаанбаатар | 🏗️ Ашигласан: C-PANEL</p>
-                    </div>
+                <div class="swiper-slide aspect-video relative group cursor-pointer">
+                    <a href="baganuur1.html" class="block w-full h-full">
+                        <img src="baganuurmain.png" class="w-full h-full object-cover">
+                        <div class="project-overlay absolute inset-0 p-10 text-white">
+                            <p class="text-lg font-bold italic tracking-wide">📍 Багануур | 🏗️ Ашигласан: C-PANEL</p>
+                        </div>
+                    </a>
                 </div> 
-                <div class="swiper-slide aspect-video">
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover grayscale hover:grayscale-0 transition duration-500">
-                    <div class="project-overlay absolute inset-x-0 bottom-0 p-10 text-white">
-                        <h4 class="text-2xl font-bold uppercase mb-2">Үйлдвэрийн Барилга</h4>
-                        <p class="text-sm italic opacity-80">📍 Дархан | 🏗️ Ашигласан: M-PANEL</p>
+                <div class="swiper-slide aspect-video relative">
+                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?auto=format&fit=crop&q=80&w=1200" class="w-full h-full object-cover">
+                    <div class="project-overlay absolute inset-0 p-10 text-white">
+                        <h4 class="text-2xl font-bold uppercase mb-2 italic">Үйлдвэрийн Барилга</h4>
+                        <p class="text-lg font-bold italic tracking-wide">📍 Дархан | 🏗️ Ашигласан: M-PANEL</p>
                     </div>
                 </div>
             </div>
@@ -219,28 +208,13 @@
             <div class="flex flex-col items-center">
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Утас</p>
                 <div class="flex flex-col gap-2">
-                    <a href="tel:+97688112124" class="flex items-center gap-2 text-xl font-black hover:text-slate-500 transition">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                        </svg>
-                        88112124
-                    </a>
-                    <a href="tel:+97699234050" class="flex items-center gap-2 text-xl font-black hover:text-slate-500 transition">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
-                            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
-                        </svg>
-                        99234050
-                    </a>
+                    <a href="tel:+97688112124" class="text-xl font-black hover:text-slate-500 transition">88112124</a>
+                    <a href="tel:+97699234050" class="text-xl font-black hover:text-slate-500 transition">99234050</a>
                 </div>
             </div>
             <div class="flex flex-col items-center">
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Фэйсбүүк</p>
-                <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="flex items-center gap-2 text-xl font-black hover:text-slate-500 transition">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
-                    </svg>
-                    Art House Mongolia
-                </a>
+                <a href="https://www.facebook.com/ArtHouseMGL" target="_blank" class="text-xl font-black hover:text-slate-500 transition">Art House Mongolia</a>
             </div>
             <div class="flex flex-col items-center">
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">И-Мэйл</p>
@@ -248,9 +222,7 @@
             </div>
             <div class="flex flex-col items-center">
                 <p class="text-[10px] font-bold text-slate-400 uppercase mb-4 tracking-widest">Хаяг</p>
-                <a href="https://maps.app.goo.gl/Mw1sTUbwMHzagqoQ9" target="_blank" class="hover:text-slate-500 transition">
-                    <p class="text-lg font-black leading-tight">Улаанбаатар хот, <br>Баянзүрх дүүрэг, 27-р хороо, Сэлбэ 22 гудамж, 525 тоот </p>
-                </a>
+                <p class="text-lg font-black leading-tight">Улаанбаатар хот, <br>Баянзүрх дүүрэг, 27-р хороо, Сэлбэ 22 гудамж, 525 тоот </p>
             </div>
         </div>
     </section>
@@ -260,30 +232,24 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1,
-            spaceBetween: 30,
-            loop: true,
+            slidesPerView: 1, spaceBetween: 30, loop: true,
             pagination: { el: ".swiper-pagination", clickable: true },
             navigation: { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
             breakpoints: { 768: { slidesPerView: 1.2, centeredSlides: true } }
         });
-
         const menuToggle = document.getElementById('menu-toggle');
         const navIcon = document.getElementById('nav-icon');
         const mobileMenu = document.getElementById('mobile-menu');
-
         function toggleMenu() {
             mobileMenu.classList.toggle('active');
             navIcon.classList.toggle('open');
             document.body.style.overflow = mobileMenu.classList.contains('active') ? 'hidden' : 'auto';
         }
-
         function closeMenu() {
             mobileMenu.classList.remove('active');
             navIcon.classList.remove('open');
             document.body.style.overflow = 'auto';
         }
-
         menuToggle.addEventListener('click', toggleMenu);
     </script>
 </body>
