--- a/index.html
+++ b/index.html
@@ -31,25 +31,15 @@
             user-select: none; pointer-events: none; text-transform: uppercase;
         }
 
-        .swiper-button-next, .swiper-button-prev { 
-            color: #0f172a !important; background: rgba(255, 255, 255, 0.9); 
-            width: 55px; height: 55px; border-radius: 50%;
-            backdrop-filter: blur(4px); box-shadow: 0 4px 15px rgba(0,0,0,0.15); z-index: 20;
-        }
-
         .product-card img { transition: transform 0.5s ease; }
         .product-card:hover img { transform: scale(1.05); }
 
-        .project-overlay {
-            background: linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0) 40%);
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            padding-bottom: 80px !important;
+        .work-overlay {
+            background: rgba(0, 0, 0, 0.4); 
+            transition: background 0.3s ease;
         }
-
-        .project-overlay p, .project-overlay h4 {
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+        .work-card:hover .work-overlay {
+            background: rgba(0, 0, 0, 0.6); 
         }
 
         #mobile-menu {
@@ -178,38 +168,38 @@
 
     <section id="work" class="py-32 max-w-7xl mx-auto px-6">
         <h2 class="text-4xl font-black uppercase italic mb-16">Бидний Ажил</h2>
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide aspect-video relative group cursor-pointer">
-                    <a href="baganuur1.html" class="block w-full h-full">
-                        <img src="baganuurmain.png" class="w-full h-full object-cover">
-                        <div class="project-overlay absolute inset-0 p-10 text-white">
-                            <p class="text-lg font-bold italic tracking-wide">C-PANEL</p>
-                        </div>
-                    </a>
-                </div> 
-                <div class="swiper-slide aspect-video relative">
-                    <img src="Mpanelcover.png" class="w-full h-full object-cover">
-                    <div class="project-overlay absolute inset-0 p-10 text-white">
-                        <p class="text-lg font-bold italic tracking-wide">M-PANEL</p>
+        <div class="grid grid-cols-2 md:grid-cols-2 gap-4 md:gap-6">
+            
+            <div class="work-card relative aspect-square md:aspect-video overflow-hidden group cursor-pointer shadow-lg">
+                <a href="baganuur1.html" class="block w-full h-full">
+                    <img src="baganuurmain.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
+                    <div class="work-overlay absolute inset-0 flex items-center justify-center text-center p-4">
+                        <p class="text-xl md:text-4xl font-black uppercase italic tracking-widest text-white">C-PANEL</p>
                     </div>
-                </div>
-                <div class="swiper-slide aspect-video relative">
-                    <img src="COMING SOON.png" class="w-full h-full object-cover">
-                    <div class="project-overlay absolute inset-0 p-10 text-white">
-                        <p class="text-lg font-bold italic tracking-wide">U-PANEL</p>
-                    </div>
-                </div>
-                <div class="swiper-slide aspect-video relative">
-                    <img src="decorcover.png" class="w-full h-full object-cover">
-                    <div class="project-overlay absolute inset-0 p-10 text-white">
-                        <p class="text-lg font-bold italic tracking-wide">Гоёлын хүрээ</p>
-                    </div>
+                </a>
+            </div> 
+
+            <div class="work-card relative aspect-square md:aspect-video overflow-hidden group cursor-pointer shadow-lg">
+                <img src="Mpanelcover.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
+                <div class="work-overlay absolute inset-0 flex items-center justify-center text-center p-4">
+                    <p class="text-xl md:text-4xl font-black uppercase italic tracking-widest text-white">M-PANEL</p>
                 </div>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-pagination"></div>
+
+            <div class="work-card relative aspect-square md:aspect-video overflow-hidden group cursor-pointer shadow-lg">
+                <img src="blanknavy.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
+                <div class="work-overlay absolute inset-0 flex items-center justify-center text-center p-4">
+                    <p class="text-xl md:text-4xl font-black uppercase italic tracking-widest text-white">U-PANEL</p>
+                </div>
+            </div>
+
+            <div class="work-card relative aspect-square md:aspect-video overflow-hidden group cursor-pointer shadow-lg">
+                <img src="decorcover.png" class="w-full h-full object-cover transition duration-500 group-hover:scale-105">
+                <div class="work-overlay absolute inset-0 flex items-center justify-center text-center p-4">
+                    <p class="text-xl md:text-4xl font-black uppercase italic tracking-widest text-white">Гоёлын хүрээ</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
@@ -240,17 +230,11 @@
 
     <footer class="py-10 bg-white border-t text-center font-bold text-[10px] uppercase text-slate-400 tracking-widest">© 2011-2026 Art House | arthouse.mn</footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 1, spaceBetween: 30, loop: true,
-            pagination: { el: ".swiper-pagination", clickable: true },
-            navigation: { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
-            breakpoints: { 768: { slidesPerView: 1.2, centeredSlides: true } }
-        });
         const menuToggle = document.getElementById('menu-toggle');
         const navIcon = document.getElementById('nav-icon');
         const mobileMenu = document.getElementById('mobile-menu');
+
         function toggleMenu() {
             mobileMenu.classList.toggle('active');
             navIcon.classList.toggle('open');
